# merakisync

./: .gitignore  0003_migration_prod.sql  0004_migration_prod.sql  0005_migration_prod.sql  0006_migration_prod.sql  CLAUDE.md  LICENSE.txt  README.md  REVIEW.md  TODO.md  alembic.ini  install.sh  merakisync.spec  pyproject.toml
.github/workflows/: release.yml
docs/: adding-a-model.md  architecture.md  migrations.md  testing.md  troubleshooting.md
docs/queries/: uplink_usage.sql
src/meraki_sync/: __about__.py  __init__.py  config.py
src/meraki_sync/cli/: cli.py  init.py
src/meraki_sync/db/: connection.py  engine.py  migrate.py  table_factory.py  tables.py
src/meraki_sync/db/migrations/: env.py
src/meraki_sync/db/migrations/versions/: 45ccc55820d4_initial_schema.py
src/meraki_sync/meraki/models/: alert.py  base.py  device.py  network.py  organization.py  template.py
src/meraki_sync/meraki/utils/: action_batch.py  get_alerts.py  get_organizations.py
src/meraki_sync/sync/: organization.py
src/meraki_sync/utils/: __init__.py  prompt.py
src/merakisync/: __about__.py  __init__.py  config.py  dashboard.py  database.py  exceptions.py  logging.py
src/merakisync/.meraki/utils/: get_networks.py
src/merakisync/cli/: cli.py  cmd_init.py  cmd_migrate.py  cmd_sync.py  cmd_update.py  init.py
src/merakisync/db/: engine.py  tables.py
src/merakisync/migrations/: env.py
src/merakisync/migrations/versions/: 0001_initial_schema.py  0002_add_vlan.py  0003_reconcile_production_schema.py  0004_add_ssid.py  0005_drop_switchport_perdevice_fields.py  0006_drop_switchport_legacy_columns.py  0007_add_uplink_provider.py  0008_add_ssid_psk.py  0009_add_ssid_psk.py  0009_jsonb_tags_product_types.py  0010_add_appliance_malware.py
src/merakisync/models/: __init__.py  alert.py  appliance_malware.py  base.py  device.py  dhcp_server_policy.py  l3_firewall_rule.py  network.py  organization.py  ssid.py  switchport.py  template.py  uplink.py  uplink_usage.py  vlan.py
src/merakisync/sync/: organization.py
src/merakisync/utils/: __init__.py  action_batch.py  casing.py  confirm.py  filter_array.py
tests/: __init__.py  test_action_batch.py  test_alert.py  test_appliance_malware.py  test_base_extra.py  test_casing.py  test_cli.py  test_cmd_migrate.py  test_cmd_sync.py  test_config.py  test_dashboard.py  test_database.py  test_device.py  test_dhcp_server_policy.py  test_filter_array.py  test_l3_firewall_rule.py  test_logging_module.py  test_models_base.py  test_network.py  test_organization.py  test_ssid.py  test_switchport.py  test_uplink.py  test_uplink_usage.py  test_vlan.py
