[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meraki-sync"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Anderson", email = "nathanea05@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"meraki", 
"psycopg2-binary", 
"SQLAlchemy>=2.0",
"alembic>=1.13"
]

[project.urls]
Documentation = "https://github.com/Nathan Anderson/meraki-sync#readme"
Issues = "https://github.com/Nathan Anderson/meraki-sync/issues"
Source = "https://github.com/Nathan Anderson/meraki-sync"

[project.scripts]
merakisync = "meraki_sync.cli.cli:main"

[tool.hatch.version]
path = "src/meraki_sync/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/meraki_sync tests}"

[tool.coverage.run]
source_pkgs = ["meraki_sync", "tests"]
branch = true
parallel = true
omit = [
  "src/meraki_sync/__about__.py",
]

[tool.coverage.paths]
meraki_sync = ["src/meraki_sync", "*/meraki-sync/src/meraki_sync"]
tests = ["tests", "*/meraki-sync/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
