[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merakisync"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Anderson", email = "nathanea05@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"meraki", 
"psycopg2-binary", 
"SQLAlchemy>=2.0",
"alembic>=1.13"
]

[project.urls]
Documentation = "https://github.com/Nathan Anderson/merakisync#readme"
Issues = "https://github.com/Nathan Anderson/merakisync/issues"
Source = "https://github.com/Nathan Anderson/merakisync"

[project.scripts]
merakisync = "merakisync.cli.cli:main"

[tool.hatch.version]
path = "src/merakisync/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/merakisync tests}"

[tool.coverage.run]
source_pkgs = ["merakisync", "tests"]
branch = true
parallel = true
omit = [
  "src/merakisync/__about__.py",
]

[tool.coverage.paths]
merakisync = ["src/merakisync", "*/merakisync/src/meraki_sync"]
tests = ["tests", "*/merakisync/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
