[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merakisync"
dynamic = ["version"]
description = "Sync Meraki Dashboard data into PostgreSQL and retrieve typed Meraki objects."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["meraki", "network", "sync", "postgresql"]
authors = [
  { name = "Nathan Anderson", email = "nathanea05@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "meraki>=1.0",
  "psycopg2-binary>=2.9",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "identify-ip @ git+https://github.com/nathanea05/identify-ip",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.0",
]

[project.urls]
Source = "https://github.com/nathanea05/merakisync"
Issues = "https://github.com/nathanea05/merakisync/issues"

[project.scripts]
merakisync = "merakisync.cli.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/merakisync/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.0",
  "mypy>=1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
typecheck = "mypy --install-types --non-interactive {args:src/merakisync tests}"

[tool.coverage.run]
source_pkgs = ["merakisync", "tests"]
branch = true
parallel = true
omit = [
  "src/merakisync/__about__.py",
  "src/merakisync/migrations/*",
]

[tool.coverage.paths]
merakisync = ["src/merakisync"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
